...
        
    }()
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        configureNavbar("pokedex")
        setUp()
        
        setUpInfiteScrollTo(collectionView)
        // Do any additional setup after loading the view.
    }
    
...
